Add error handling and logging system for stability

--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./Страница профиль/css/font.css">
   <link rel="stylesheet" href="./css/profile.css">
   <script src="./Страница профиль/js/animation.js"></script>
+  <script src="./js/error-handler.js" defer></script>
   <script src="./js/api.js" defer></script>
   <script src="./js/profile.js" defer></script>
 </head>
