Auto-determine car class based on brand, make it read-only

--- a/profile.html
+++ b/profile.html
@@ -98,7 +98,7 @@
       </div>
       <div class="edit-car-form-group">
         <label for="edit-car-class">Класс автомобиля</label>
-        <input type="text" id="edit-car-class" placeholder="Класс 3" required>
+        <input type="text" id="edit-car-class" placeholder="Класс 3" readonly style="background-color: #f0f0f0; cursor: not-allowed;">
       </div>
       <div class="edit-car-button-group">
         <button type="submit" class="edit-car-submit-btn">Сохранить</button>
