--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Pixso HTML</title>
   <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/index.css">
-  <script src="js/animation.js"></script>
+  <script src="js/animation.js" defer></script>
   <script src="js/error-handler.js" defer></script>
   <script src="js/api.js" defer></script>
   <script src="js/index.js" defer></script>
