Prevent infinite loops - add isUpdating flag to block simultaneous requests

--- a/profile.html
+++ b/profile.html
@@ -86,18 +86,18 @@
     <form id="edit-car-form" onsubmit="handleEditCar(event)">
       <div class="edit-car-form-group">
         <label for="edit-car-brand">Марка</label>
-        <input type="text" id="edit-car-brand" placeholder="BMW" required>
+        <input type="text" id="edit-car-brand" placeholder="BMW">
       </div>
       <div class="edit-car-form-group">
         <label for="edit-car-model">Модель</label>
-        <input type="text" id="edit-car-model" placeholder="X5" required>
+        <input type="text" id="edit-car-model" placeholder="X5">
       </div>
       <div class="edit-car-form-group">
         <label for="edit-car-number">Номер</label>
-        <input type="text" id="edit-car-number" placeholder="Р927СО777" required>
+        <input type="text" id="edit-car-number" placeholder="Р927СО777">
       </div>
       <div class="edit-car-button-group">
-        <button type="submit" class="edit-car-submit-btn">Сохранить</button>
+        <button type="submit" class="edit-car-submit-btn">Закрыть</button>
         <button type="button" class="edit-car-delete-btn" onclick="handleDeleteCar()">Удалить</button>
       </div>
     </form>
