Add seller service integration - load companies and services from backend

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="js/animation.js" defer></script>
   <script src="js/error-handler.js" defer></script>
   <script src="js/api.js" defer></script>
+  <script src="js/seller.js" defer></script>
   <script src="js/index.js" defer></script>
 </head>
 <body>
