--- a/profile.html
+++ b/profile.html
@@ -8,9 +8,10 @@
   <link rel="stylesheet" href="./css/profile.css">
   <!-- Temporarily disabled to debug element updates -->
   <!-- <script src="./Страница профиль/js/animation.js" defer></script> -->
-  <script src="./js/error-handler.js" defer></script>
-  <script src="./js/api.js" defer></script>
-  <script src="./js/profile.js" defer></script>
+  <script src="js/animation.js?v=1" defer></script>
+  <script src="js/error-handler.js?v=1" defer></script>
+  <script src="js/api.js?v=1" defer></script>
+  <script src="js/profile.js?v=1" defer></script>
 </head>
 <body>
 <!-- Background image -->
