Add CORS middleware to PriceService and fix dynamic price calculation

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Pixso HTML</title>
   <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/index.css">
-  <script src="js/animation.js?v=5" defer></script>
-  <script src="js/error-handler.js?v=5" defer></script>
-  <script src="js/api.js?v=5" defer></script>
-  <script src="js/seller.js?v=5" defer></script>
-  <script src="js/index.js?v=5" defer></script>
+  <script src="js/animation.js?v=9" defer></script>
+  <script src="js/error-handler.js?v=9" defer></script>
+  <script src="js/api.js?v=9" defer></script>
+  <script src="js/seller.js?v=9" defer></script>
+  <script src="js/index.js?v=9" defer></script>
 </head>
 <body>
 <!-- Background image -->
@@ -85,119 +85,9 @@
   </div>
 </div>
 
-<!-- Services grid -->
+<!-- Services grid - populated dynamically by seller.js -->
 <div class="services-grid">
-  <div class="frame-9_464 service-card" 
-    data-service-name="Стандартная мойка" 
-    data-service-price="от 1500 ₽"
-    data-service-short="Мойка кузова и колес"
-    data-service-full="Стандартная мойка включает тщательную очистку кузова автомобиля и колес с использованием профессиональных моющих средств ведущих мировых брендов. Высокотехнологичное оборудование обеспечивает качественный результат.">
-    <span class="text-2_1366">Цена:</span>
-    <span class="service-price-display">от 1500 ₽</span>
-    <div class="frame-2_1371">
-      <div class="vector-21_9"></div>
-    </div>
-    <span class="text-2_1365 service-name">Стандартная мойка</span>
-    <span class="text-2_1369 service-description">Мойка кузова и колес</span>
-  </div>
-
-  <div class="frame-9_464 service-card" 
-    data-service-name="Комплексная мойка" 
-    data-service-price="2500 ₽"
-    data-service-short="Полная мойка с салоном"
-    data-service-full="Комплексная мойка включает в себя тщательную очистку кузова, салона, подкапотного пространства и дисков. Используются профессиональные моющие средства и оборудование для максимального результата.">
-    <span class="text-2_1366">Цена:</span>
-    <span class="service-price-display">2500 ₽</span>
-    <div class="frame-2_1371">
-      <div class="vector-21_9"></div>
-    </div>
-    <span class="text-2_1365 service-name">Комплексная мойка</span>
-    <span class="text-2_1369 service-description">Полная мойка с салоном</span>
-  </div>
-
-  <div class="frame-9_464 service-card" 
-    data-service-name="Полировка кузова" 
-    data-service-price="3500 ₽"
-    data-service-short="Защитная полировка"
-    data-service-full="Профессиональная полировка кузова защищает лакокрасочное покрытие от внешних факторов. Процедура включает нанесение защитного слоя и полировку для блеска и гладкости поверхности.">
-    <span class="text-2_1366">Цена:</span>
-    <span class="service-price-display">3500 ₽</span>
-    <div class="frame-2_1371">
-      <div class="vector-21_9"></div>
-    </div>
-    <span class="text-2_1365 service-name">Полировка кузова</span>
-    <span class="text-2_1369 service-description">Защитная полировка</span>
-  </div>
-
-  <div class="frame-9_464 service-card" 
-    data-service-name="Химчистка салона" 
-    data-service-price="2000 ₽"
-    data-service-short="Глубокая чистка салона"
-    data-service-full="Профессиональная химчистка салона автомобиля включает глубокую очистку сидений, обивки, ковровых покрытий и пластиковых поверхностей. Используются безопасные и эффективные моющие средства.">
-    <span class="text-2_1366">Цена:</span>
-    <span class="service-price-display">2000 ₽</span>
-    <div class="frame-2_1371">
-      <div class="vector-21_9"></div>
-    </div>
-    <span class="text-2_1365 service-name">Химчистка салона</span>
-    <span class="text-2_1369 service-description">Глубокая чистка салона</span>
-  </div>
-
-  <div class="frame-9_464 service-card" 
-    data-service-name="Защитные покрытия" 
-    data-service-price="4000 ₽"
-    data-service-short="Нанесение защитного слоя"
-    data-service-full="Нанесение защитных покрытий на кузов автомобиля обеспечивает долгосрочную защиту от внешних воздействий, грязи, солнца и осадков. Используются профессиональные материалы Ceramic Pro и Gyeon.">
-    <span class="text-2_1366">Цена:</span>
-    <span class="service-price-display">4000 ₽</span>
-    <div class="frame-2_1371">
-      <div class="vector-21_9"></div>
-    </div>
-    <span class="text-2_1365 service-name">Защитные покрытия</span>
-    <span class="text-2_1369 service-description">Нанесение защитного слоя</span>
-  </div>
-
-  <div class="frame-9_464 service-card" 
-    data-service-name="Удаление вмятин" 
-    data-service-price="от 3000 ₽"
-    data-service-short="Удаление вмятин без покраски"
-    data-service-full="Профессиональное удаление вмятин без покраски с использованием специального оборудования и инструментов. Восстанавливает первоначальный вид кузова без повреждения лакокрасочного покрытия.">
-    <span class="text-2_1366">Цена:</span>
-    <span class="service-price-display">от 3000 ₽</span>
-    <div class="frame-2_1371">
-      <div class="vector-21_9"></div>
-    </div>
-    <span class="text-2_1365 service-name">Удаление вмятин</span>
-    <span class="text-2_1369 service-description">Удаление без покраски</span>
-  </div>
-
-  <div class="frame-9_464 service-card" 
-    data-service-name="Оклейка/Тонировка" 
-    data-service-price="от 2500 ₽"
-    data-service-short="Защитная пленка и тонировка"
-    data-service-full="Профессиональная оклейка защитной пленкой и тонировка стекол автомобиля. Защищает от ультрафиолета, повышает приватность и улучшает внешний вид автомобиля. Используются качественные материалы.">
-    <span class="text-2_1366">Цена:</span>
-    <span class="service-price-display">от 2500 ₽</span>
-    <div class="frame-2_1371">
-      <div class="vector-21_9"></div>
-    </div>
-    <span class="text-2_1365 service-name">Оклейка/Тонировка</span>
-    <span class="text-2_1369 service-description">Защитная пленка и тонировка</span>
-  </div>
-
-  <div class="frame-9_464 service-card" 
-    data-service-name="Дооснащение" 
-    data-service-price="от 5000 ₽"
-    data-service-short="Установка дополнительного оборудования"
-    data-service-full="Профессиональная установка дополнительного оборудования и аксессуаров на автомобиль. Включает монтаж парктроников, видеорегистраторов, сигнализации и других электронных устройств.">
-    <span class="text-2_1366">Цена:</span>
-    <span class="service-price-display">от 5000 ₽</span>
-    <div class="frame-2_1371">
-      <div class="vector-21_9"></div>
-    </div>
-    <span class="text-2_1365 service-name">Дооснащение</span>
-    <span class="text-2_1369 service-description">Установка оборудования</span>
-  </div>
+  <!-- Dynamic service cards will be inserted here by seller.js -->
 </div>
 
 <!-- Bottom button -->
