Add dynamic API configuration - support environment variables

--- a/profile.html
+++ b/profile.html
@@ -8,10 +8,11 @@
   <link rel="stylesheet" href="./css/profile.css">
   <!-- Temporarily disabled to debug element updates -->
   <!-- <script src="./Страница профиль/js/animation.js" defer></script> -->
-  <script src="js/animation.js?v=13" defer></script>
-  <script src="js/error-handler.js?v=13" defer></script>
-  <script src="js/api.js?v=13" defer></script>
-  <script src="js/profile.js?v=13" defer></script>
+  <script src="config.js"></script>
+  <script src="js/animation.js?v=14" defer></script>
+  <script src="js/error-handler.js?v=14" defer></script>
+  <script src="js/api.js?v=14" defer></script>
+  <script src="js/profile.js?v=14" defer></script>
 </head>
 <body>
 <!-- Background image -->
