--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <title>Faberon24</title>
   <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/index.css">
-  <script src="js/animation.js?v=13" defer></script>
-  <script src="js/error-handler.js?v=13" defer></script>
-  <script src="js/api.js?v=13" defer></script>
-  <script src="js/seller.js?v=13" defer></script>
-  <script src="js/index.js?v=13" defer></script>
+  <script src="config.js"></script>
+  <script src="js/animation.js?v=14" defer></script>
+  <script src="js/error-handler.js?v=14" defer></script>
+  <script src="js/api.js?v=14" defer></script>
+  <script src="js/seller.js?v=14" defer></script>
+  <script src="js/index.js?v=14" defer></script>
 </head>
 <body>
 <!-- Background image -->
