--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="API_BASE_URL" content="">
+  <meta name="SELLER_API_BASE" content="">
+  <meta name="PRICE_API_BASE" content="">
   <title>Faberon24</title>
   <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/index.css">
   <script src="config.js"></script>
-  <script src="js/animation.js?v=14" defer></script>
-  <script src="js/error-handler.js?v=14" defer></script>
-  <script src="js/api.js?v=14" defer></script>
-  <script src="js/seller.js?v=14" defer></script>
-  <script src="js/index.js?v=14" defer></script>
+  <script src="js/animation.js?v=15" defer></script>
+  <script src="js/error-handler.js?v=15" defer></script>
+  <script src="js/api.js?v=15" defer></script>
+  <script src="js/seller.js?v=15" defer></script>
+  <script src="js/index.js?v=15" defer></script>
 </head>
 <body>
 <!-- Background image -->
