--- a/profile.html
+++ b/profile.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="API_BASE_URL" content="">
+  <meta name="SELLER_API_BASE" content="">
+  <meta name="PRICE_API_BASE" content="">
   <title>Faberon24</title>
   <link rel="stylesheet" href="./Страница профиль/css/font.css">
   <link rel="stylesheet" href="./css/profile.css">
   <!-- Temporarily disabled to debug element updates -->
   <!-- <script src="./Страница профиль/js/animation.js" defer></script> -->
   <script src="config.js"></script>
-  <script src="js/animation.js?v=14" defer></script>
-  <script src="js/error-handler.js?v=14" defer></script>
-  <script src="js/api.js?v=14" defer></script>
-  <script src="js/profile.js?v=14" defer></script>
+  <script src="js/animation.js?v=15" defer></script>
+  <script src="js/error-handler.js?v=15" defer></script>
+  <script src="js/api.js?v=15" defer></script>
+  <script src="js/profile.js?v=15" defer></script>
 </head>
 <body>
 <!-- Background image -->
