Add compact filters popup with price and duration dropdowns

--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Faberon24</title>
   <link rel="stylesheet" href="./Страница профиль/css/font.css">
-  <link rel="stylesheet" href="./css/profile.css">
+  <link rel="stylesheet" href="./css/profile.css?v=2">
   <!-- Temporarily disabled to debug element updates -->
   <!-- <script src="./Страница профиль/js/animation.js" defer></script> -->
   <script src="config.js"></script>
@@ -100,7 +100,7 @@
         <input type="text" id="edit-car-number" placeholder="Р927СО777" required>
       </div>
       <div class="edit-car-button-group">
-        <button type="submit" class="edit-car-submit-btn">Сохранить</button>
+        <!--<button type="submit" class="edit-car-submit-btn">Сохранить</button> -->
         <button type="button" class="edit-car-delete-btn" onclick="handleDeleteCar()">Удалить</button>
       </div>
     </form>
