--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Faberon24</title>
   <link rel="stylesheet" href="css/font.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/index.css?v=2">
+  <link rel="stylesheet" href="css/filters-popup.css">
   <script src="config.js"></script>
-  <script src="js/animation.js?v=15" defer></script>
-  <script src="js/error-handler.js?v=15" defer></script>
-  <script src="js/api.js?v=15" defer></script>
-  <script src="js/seller.js?v=15" defer></script>
-  <script src="js/index.js?v=15" defer></script>
+  <script src="js/animation.js?v=16" defer></script>
+  <script src="js/error-handler.js?v=16" defer></script>
+  <script src="js/api.js?v=16" defer></script>
+  <script src="js/seller.js?v=16" defer></script>
+  <script src="js/filters-popup.js?v=16" defer></script>
+  <script src="js/index.js?v=16" defer></script>
 </head>
 <body>
 <!-- Background image -->
@@ -30,8 +32,47 @@
 </div>
 
 <!-- Settings button -->
-<div id="21_190" class="frame-21_190">
+<div id="21_190" class="frame-21_190 filters-btn">
   <div id="2_496" class="vector-2_496"></div>
+</div>
+
+<!-- Filters Popup -->
+<div id="filters-popup" class="filters-popup hidden">
+  <div class="filters-popup-overlay"></div>
+  <div class="filters-popup-content">
+    <!-- All button -->
+    <button class="filter-btn filter-btn-all" id="filter-all">Все</button>
+    
+    <!-- Price dropdown -->
+    <div class="filter-dropdown">
+      <button class="filter-btn filter-dropdown-btn" id="price-dropdown-btn">
+        <span class="filter-icon">💰</span>
+        <span class="filter-label">Стоимость</span>
+        <span class="filter-arrow">▼</span>
+      </button>
+      <div class="filter-dropdown-menu hidden" id="price-dropdown-menu">
+        <div class="filter-option" data-price="0-500">До 500 ₽</div>
+        <div class="filter-option" data-price="500-1000">500 - 1000 ₽</div>
+        <div class="filter-option" data-price="1000-2000">1000 - 2000 ₽</div>
+        <div class="filter-option" data-price="2000-5000">2000 - 5000 ₽</div>
+        <div class="filter-option" data-price="5000+">5000+ ₽</div>
+      </div>
+    </div>
+    
+    <!-- Duration dropdown -->
+    <div class="filter-dropdown">
+      <button class="filter-btn filter-dropdown-btn" id="duration-dropdown-btn">
+        <span class="filter-icon">⏱</span>
+        <span class="filter-label">Длительность</span>
+        <span class="filter-arrow">▼</span>
+      </button>
+      <div class="filter-dropdown-menu hidden" id="duration-dropdown-menu">
+        <div class="filter-option" data-duration="0-30">До 30 минут</div>
+        <div class="filter-option" data-duration="30-60">30 - 60 минут</div>
+        <div class="filter-option" data-duration="60+">Более 60 минут</div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <!-- Card header -->
