Add responsive design for mobile devices - scales all elements proportionally

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/font.css">
   <link rel="stylesheet" href="css/index.css?v=2">
   <link rel="stylesheet" href="css/filters-popup.css?v=4">
+  <link rel="stylesheet" href="css/responsive.css">
   <script src="config.js"></script>
   <script src="js/animation.js?v=17" defer></script>
   <script src="js/error-handler.js?v=17" defer></script>
