--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
   <title>Faberon24</title>
   <link rel="stylesheet" href="./Страница профиль/css/font.css">
   <link rel="stylesheet" href="./css/profile.css?v=2">
+  <link rel="stylesheet" href="./css/responsive.css">
   <!-- Temporarily disabled to debug element updates -->
   <!-- <script src="./Страница профиль/js/animation.js" defer></script> -->
   <script src="config.js"></script>
