fix: reduce top padding and clear default placeholder data on profile page
- Reduce padding-top from 80px to 40px for better spacing
- Replace default user data with loading placeholders:
  - User name: 'Загрузка...' instead of 'Алексеев Станислав'
  - Phone: 'тел. загрузка...' instead of '+7 (987) 123-45-67'
  - Car data: '-' instead of 'BMW X5 Р927СО777'
- This prevents showing default data before backend data loads
- Update profile.css version to v=4

--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Faberon24</title>
   <link rel="stylesheet" href="./Страница профиль/css/font.css">
-  <link rel="stylesheet" href="./css/profile.css?v=3">
+  <link rel="stylesheet" href="./css/profile.css?v=4">
   <!-- Temporarily disabled to debug element updates -->
   <!-- <script src="./Страница профиль/js/animation.js" defer></script> -->
   <script src="config.js"></script>
@@ -43,15 +43,15 @@
       </div>
       <div id="62_1430" class="frame-62_1430">
         <div id="62_1455" class="vector-62_1455"></div>
-        <span id="62_1457" class="text-62_1457">BMW</span>
-        <span id="62_1458" class="text-62_1458">X5</span>
-        <span id="62_1459" class="text-62_1459">Р927СО777</span>
+        <span id="62_1457" class="text-62_1457">-</span>
+        <span id="62_1458" class="text-62_1458">-</span>
+        <span id="62_1459" class="text-62_1459">-</span>
         <span id="62_1461" class="text-62_1461">Класс автомобиля</span>
-        <span id="62_1462" class="text-62_1462">Класс 3</span>
+        <span id="62_1462" class="text-62_1462">-</span>
       </div>
       <span id="62_1456" class="text-62_1456">Мой автомобиль </span>
       <div id="62_1463" class="frame-62_1463">
-        <span id="62_1468" class="text-62_1468">BMW X5 - Р927СО777</span>
+        <span id="62_1468" class="text-62_1468">Загрузка...</span>
         <div id="62_1470" class="vector-62_1470"></div>
         <!-- Dropdown Menu -->
         <div id="car-dropdown-menu" class="car-dropdown-menu">
@@ -64,8 +64,8 @@
       <div id="62_1442" class="frame-62_1442">
         <div id="62_1443" class="rectangle-62_1443"></div>
         <div id="62_1450" class="vector-62_1450"></div>
-        <span id="62_1445" class="text-62_1445">Алексеев Станислав</span>
-        <span id="62_1446" class="text-62_1446">тел. +7 (987) 123-45-67</span>
+        <span id="62_1445" class="text-62_1445">Загрузка...</span>
+        <span id="62_1446" class="text-62_1446">тел. загрузка...</span>
       </div>
     </div>
   </div>
